--- a/src/markups/_button-ru.html
+++ b/src/markups/_button-ru.html
@@ -30,6 +30,30 @@
 
             <button class="button" type="button" disabled>Отправить</button>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.button--loading</h2>
+
+            <button class="button button--loading" type="button" disabled>Submit</button>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.button--success</h2>
+
+            <button class="button button--success" type="button" disabled>Submit</button>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.button--warning</h2>
+
+            <button class="button button--warning" type="button" disabled>Submit</button>
+
 
             <br>
             <br>
