--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -30,6 +30,14 @@
 
             <button class="button" type="button" disabled>Submit</button>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>.button--loading</h2>
+
+            <button class="button button--loading" type="button" disabled>Submit</button>
+
 
             <br>
             <br>
