--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
-    <body>
+    <body style="background: #E6F5FF;">
 
         <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
@@ -385,9 +385,8 @@
         <script src="../vendors/inputmask/jquery.inputmask.min.js"></script>
         <script src="../vendors/inputmask.phone/inputmask.phone.extensions.min.js"></script>
         <script src="../vendors/inputmask.phone/phone-codes/phone-ru.min.js"></script>
-        <script src="../scripts/_mfp.js"></script>
-        <script src="../scripts/_input.js"></script>
-        <script src="../scripts/_inputmask.js"></script>
+        <script src="../vendors/swiper/swiper-bundle.min.js"></script>
+        <script src="../scripts/scripts.js"></script>
 
 
     </body>
