--- a/src/markups/_wysiwyg.html
+++ b/src/markups/_wysiwyg.html
@@ -80,9 +80,8 @@
         <script src="../vendors/inputmask/jquery.inputmask.min.js"></script>
         <script src="../vendors/inputmask.phone/inputmask.phone.extensions.min.js"></script>
         <script src="../vendors/inputmask.phone/phone-codes/phone-ru.min.js"></script>
-        <script src="../scripts/_mfp.js"></script>
-        <script src="../scripts/_input.js"></script>
-        <script src="../scripts/_inputmask.js"></script>
+        <script src="../vendors/swiper/swiper-bundle.min.js"></script>
+        <script src="../scripts/scripts.js"></script>
 
 
     </body>
